// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> with additional className matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className="y-image TEST_CLASSNAME"
  shouldFadeIn={false}
  src="image.png"
/>
`;

exports[`<Image /> with default options matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className="y-image"
  shouldFadeIn={false}
  src="image.png"
/>
`;

exports[`<Image /> with fullWidth matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className="y-image y-image__fullWidth"
  shouldFadeIn={false}
  src="image.png"
  width="100%"
/>
`;

exports[`<Image /> with height 50 and width 100 matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className="y-image"
  height={50}
  shouldFadeIn={false}
  src="image.png"
  width={100}
/>
`;

exports[`<Image /> with imageFit cover matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className="y-image"
  imageFit={2}
  shouldFadeIn={false}
  src="image.png"
/>
`;

exports[`<Image /> with shouldFadeIn matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className="y-image"
  shouldFadeIn={true}
  src="image.png"
/>
`;
